--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "helperbot",
+  "name": "smartsupport",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "discord.js": "^14.17.3",
-    "mysql2": "^3.12.0",
+    "mongoose": "^8.15.2",
     "shardclient": "^1.2.4"
   },
   "devDependencies": {
